fix(frontend): Align dev tools to center-bottom of screen
The dev tools obscure some functionality, so moving. I see this as
a temporary solution, I'd like to see a better solution, but want
to move forward onto more important work right now.

--- a/client/src/dev-tools/tools.module.css
+++ b/client/src/dev-tools/tools.module.css
@@ -1,5 +1,6 @@
 .devTools {
   position: absolute;
+  left: 46.5%;
   bottom: 0;
   background: black;
   opacity: 0.4;
